--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,6 @@ p 	{font-size: 16px;
 	color: #070719;
 	font-size:28px;
 	font-family: "apercu"; 
-	position: center;
 }
 
 .sub-heading { 
@@ -61,6 +60,7 @@ p 	{font-size: 16px;
 	padding-right: 1%; 
 	padding-left: 1%; 
 	padding-bottom: 30px;
+	padding-top: 20px;
 	color: #FF00A6;
 	font-family: "apercu"
 }
@@ -79,27 +79,42 @@ p 	{font-size: 16px;
 	width: 100%;
 	padding-bottom: 30px;
 	padding-top: 20px;
-	}	
-
-.bottom-container {
+	box-sizing: border-box;
+		
+}
+.contact {
+	width:100%; 
+	float:left;
+	background-color: #BDBDBD;
 	padding-top: 30px;	
 	padding-bottom: 50px;
-	background-color: #BDBDBD;	
-}
 
+}
 @media only screen and (min-width: 760px) {	
-	.float {
+.float {
 		float: left;
 		width: 33%;
 		margin-left: auto;
 		margin-right: auto;
+		box-sizing: border-box;
+
 	}
+ .float-larger {
+		float: left;
+		width: 34%;
+		margin-left: auto;
+		margin-right: auto;
+		box-sizing: border-box;
+	}
+
 	.paragraph {
-		max-width: 500px;
+ 		max-width: 500px;
 		text-align: center;	
 		margin-left: auto;
 		margin-right: auto;
 	}
+
+	
 }
 
 
